--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
          <button class="reset-button" onclick="reset()">Reset</button>
        </div>
        <script src="main.js"></script>
+       <div id="start">
+        <button class="reset-button" onclick="start(5)">5</button>
+        <button class="reset-button" onclick="start(10)">10</button>
+        <button class="reset-button" onclick="start(15)">15</button>
+       </div>
   </body>
   
 </html>
